Accordion spacing issue is done.

--- a/missingkids/less/accordion.less
+++ b/missingkids/less/accordion.less
@@ -7,7 +7,7 @@
         background-color: transparent;
         border: 0;
         border-radius: 10px;
-        padding: 16px 0 0;
+        padding: 0;
     }
     .panel-title {
         > a {
